# sdl2-wrapper

./: .gitignore  CMakeLists.txt  project.cmake
exe/: main.cpp
include/sdl2-wrapper/: AVPacketPlayer.cpp  AVPacketPlayer.h  AudioFramePlayer.cpp  AudioFramePlayer.h  AudioPacketPlayer.cpp  AudioPacketPlayer.h  IRefTimer.cpp  IRefTimer.h  SDL_AudioSpecWrapper.cpp  SDL_AudioSpecWrapper.h  SDL_DefaultAudioDevice.cpp  SDL_DefaultAudioDevice.h  SDL_EventGetter.cpp  SDL_EventGetter.h  SDL_Initializer.cpp  SDL_Initializer.h  SDL_RendererWrapper.cpp  SDL_RendererWrapper.h  SDL_TextureWrapper.cpp  SDL_TextureWrapper.h  SDL_WindowWrapper.cpp  SDL_WindowWrapper.h  Timer.cpp  Timer.h  VideoFrameDisplayer.cpp  VideoFrameDisplayer.h  VideoFramePlayer.cpp  VideoFramePlayer.h  VideoPacketPlayer.cpp  VideoPacketPlayer.h  pch.h
private_src/: pch.h
